--- a/api/pom.xml
+++ b/api/pom.xml
@@ -43,7 +43,11 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.12</artifactId>
-			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.kennycason</groupId>
+			<artifactId>kumo-core</artifactId>
+			<version>1.28</version>
 		</dependency>
 	</dependencies>
 
